--- a/index.html
+++ b/index.html
@@ -33,10 +33,18 @@
       <div id="match-info" class="match-info"></div>
     </section>
 
-    <section class="channels-section">
-      <h2>📺 Available Channels</h2>
-      <div id="channels-container" class="channels"></div>
-    </section>
+     <section class="channels-section">
+  <h2>📺 Available Channels</h2>
+  <div id="channels-container" class="channels"></div>
+
+  <div class="backuppage">
+    <a href="https://arkhanrimu.github.io/sportsurgelive/BackupServer/" class="backup-btn">Alternative Server</a>
+  </div>
+</section>
+<div class="note">
+<p><b>Note:</b> We recommend watching main channels because "Alternative Server" contains more ads. If main channels are down by any chance, then you should watch Alternative Server.</p>
+	
+</div>
 
     <section id="player-container" class="player-container">
       <iframe id="stream-frame" src="" allowfullscreen></iframe>
@@ -69,6 +77,7 @@
   
 </body>
 </html>
+
 
 
 
