--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
   <div id="channels-container" class="channels"></div>
 
   <div class="backuppage">
-    <a href="https://arkhanrimu.github.io/sportsurgelive/BackupServer/" class="backup-btn">Alternative Server</a>
+    <a href="https://hesgoal2.world/" target="_blank" class="backup-btn">Ad-Free Server</a>
   </div>
 </section>
 <div class="note">
-<p><b>Note:</b> We recommend watching main channels because "Alternative Server" contains more ads. If main channels are down by any chance, then you should watch Alternative Server.</p>
+<p><b>Note:</b> Ad-Free Server doesn't have annoying Popup Ads. User experience is our first priority.</p>
 	
 </div>
 
@@ -58,7 +58,7 @@
 
   <script src="script.js"></script>
 
-<script type='text/javascript' src='//pl27665002.revenuecpmgate.com/42/a2/06/42a2066e3be112aedbf6c8e54d47f8c3.js'></script>
+
 
 <div id="sticky-footer-ad">
   <div class="ad-content">
@@ -77,6 +77,7 @@
   
 </body>
 </html>
+
 
 
 
