--- a/index.html
+++ b/index.html
@@ -46,6 +46,23 @@
 	
 </div>
 
+	  <div class="videoadvertisement">
+  <a href="https://amzn.to/42Muj3h" 
+     target="_blank" 
+     rel="sponsored noopener">
+    <video autoplay muted loop playsinline preload="none" loading="lazy">
+      <source src="SonyTVAd.mp4" type="video/mp4">
+      Your browser does not support the video tag.
+    </video>
+
+    <!-- Overlay CTA -->
+    <div class="video-cta">
+      <span>🔥 Upgrade Your Game Day!</span>
+      <button class="buy-btn">Shop Sony BRAVIA on Amazon</button>
+    </div>
+  </a>
+</div>
+
     <section id="player-container" class="player-container">
       <iframe id="stream-frame" src="" allowfullscreen></iframe>
       
@@ -77,6 +94,7 @@
   
 </body>
 </html>
+
 
 
 
