--- a/index.html
+++ b/index.html
@@ -46,20 +46,9 @@
 	
 </div>
 
-	  <div class="videoadvertisement">
-  <a href="https://amzn.to/42Muj3h" 
-     target="_blank" 
-     rel="sponsored noopener">
-    <video autoplay muted loop playsinline preload="none" loading="lazy">
-      <source src="SonyTVAd.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
-
-    <!-- Overlay CTA -->
-    <div class="video-cta">
-      <span>🔥 Upgrade Your Game Day!</span>
-      <button class="buy-btn">Shop Sony BRAVIA on Amazon</button>
-    </div>
+	   <div class="amazonadvertisement">
+  <a href="https://amzn.to/4nmR8Tr" rel="sponsored noopener">
+    <img src="sonybravia.jpg"/>
   </a>
 </div>
 
@@ -94,6 +83,7 @@
   
 </body>
 </html>
+
 
 
 
