--- a/index.html
+++ b/index.html
@@ -45,11 +45,12 @@
 <p><b>Note:</b> Ad-Free Server doesn't have annoying Popup Ads. User experience is our first priority.</p>
 	
 </div>
-
+<center>
 	   <div class="amazonadvertisement">
   <a href="https://amzn.to/4nmR8Tr" rel="sponsored noopener">
     <img src="sonybravia.jpg"/>
   </a>
+		   </center>
 </div>
 
     <section id="player-container" class="player-container">
@@ -83,6 +84,7 @@
   
 </body>
 </html>
+
 
 
 
